# flask-poc

./: pyproject.toml
src/poc/: app.py
src/poc/adapters/: mappers.py  orm.py  repositories.py
src/poc/model/: book.py
tests/: conftest.py
tests/e2e/api/: test_api.py
tests/integration/repository/: test_repository.py
tests/unit/adapters/: test_mappers.py
tests/unit/model/: test_books.py
