[tool.poetry]
name = "flask-poc"
version = "0.1.0"
description = ""
authors = ["tsanchez <v-tsanchez@acvauctions.com>"]
readme = "README.md"
packages = [{ include = "poc", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
