[tool.poetry]
name = "flask-poc"
version = "0.1.0"
description = ""
authors = ["tsanchez <v-tsanchez@acvauctions.com>"]
readme = "README.md"
packages = [{ include = "poc", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
